--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,6 @@ jobs:
         run: |
           $CONDA/bin/conda install sphinx
           $CONDA/bin/conda install -c conda-forge myst-parser
-          pip install .
+          pip install -e .
           sphinx-build -b webslides example_doc example_doc/_webslides_build
           echo test, and deploy your project.
