--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,10 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
+      - name: Get webslides
+        run: ./get_webslides.sh
+        shell: bash
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
