--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
-recursive-include webslides_builder/themes/webslides_base *.conf *.css *.js *.html
-recursive-include webslides_builder *.py
+recursive-include sphinx_webslides_builder/themes/webslides_base *.conf *.css *.js *.html
+recursive-include sphinx_webslides_builder *.py
