--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
           $CONDA/bin/conda install sphinx
           $CONDA/bin/conda install -c conda-forge myst-parser
           pip install .
+          pip install myst-parser
           sphinx-build -b webslides example_doc example_doc/_webslides_build
           echo test, and deploy your project.
       - name: Archive results
